--- a/css/common.css
+++ b/css/common.css
@@ -78,9 +78,9 @@ html,body{ -webkit-tap-highlight-color: transparent;width:100%;height:100%; }/*å
 .game_roles .swiper-container{width:100%;height:100%;z-index:1;}
 
 .part3_title{width:750px;height:130px;display:flex;justify-content:center;position:absolute;top:60px;left:0px; z-index: 10;}
-.game_roles{width:750px;height:100%;z-index:1; position: absolute;left:0;}
-.dock_list{width:750px;height:200px;z-index:1000;position: fixed;}
-.swiper_dock_list{width:750px;height:200px;background:url(../images/part3_ico_bg.png) no-repeat;z-index:1000;background-size:100% 100%; }
+.game_roles{width:750px;height:100%;z-index:1; position: absolute;left:0;top:0;}
+.dock_list{width:750px;height:100%;z-index:1000;position:relative;}
+.swiper_dock_list{width:750px;height:200px;background:url(../images/part3_ico_bg.png) no-repeat;z-index:1000;background-size:100% 100%; position: absolute;bottom: 10px; }
 .swiper_dock_list li:nth-child(1), .swiper_dock_list li:nth-child(2), .swiper_dock_list li:nth-child(3), .swiper_dock_list li:nth-child(4){width:151px;height:150px;cursor:pointer;
 z-index: 1000;}
 .swiper_dock_list li:nth-child(1){position:absolute;top:18px;left:38px;z-index:1000;}
