--- a/css/common.css
+++ b/css/common.css
@@ -75,10 +75,12 @@ html,body{ -webkit-tap-highlight-color: transparent;width:100%;height:100%; }/*å
 .da_cheng_40{position:absolute;top:324px;left:39px;}
 .da_cheng_70{position:absolute;top:477px;;left:39px;}
 /*part3*/
-.game_roles .swiper-container{width:100%;height:100%;z-index:1;}
-
 .part3_title{width:750px;height:130px;display:flex;justify-content:center;position:absolute;top:60px;left:0px; z-index: 10;}
-.game_roles{width:750px;height:1200px;z-index:1;position: absolute;top:0;left:0;}
+.game_roles{width:750px;height:100%;}
+.game_roles .swiper-container{width:100%;height:100%;}
+.game_roles .swiper-slide{width:100%;height:100%; position: relative;}
+
+
 .dock_list{width:750px;height:200px;z-index:1000; position: absolute;bottom:0;left:0;}
 .swiper_dock_list{width:750px;height:200px;background:url(../images/part3_ico_bg.png) no-repeat;z-index:1000;background-size:100% 100%; }
 .swiper_dock_list li:nth-child(1), .swiper_dock_list li:nth-child(2), .swiper_dock_list li:nth-child(3), .swiper_dock_list li:nth-child(4){width:151px;height:150px;cursor:pointer;
