--- a/css/common.css
+++ b/css/common.css
@@ -81,7 +81,7 @@ html,body{ -webkit-tap-highlight-color: transparent;width:100%;height:100%; }/*å
 .game_roles .swiper-slide{width:100%;height:100%; position: relative;}
 
 
-.dock_list{width:750px;height:200px;z-index:1000; position: absolute;bottom:0;left:0;}
+.dock_list{width:750px;height:200px;z-index:1000; position:absolute;left:0;bottom:0;}
 .swiper_dock_list{width:750px;height:200px;background:url(../images/part3_ico_bg.png) no-repeat;z-index:1000;background-size:100% 100%; }
 .swiper_dock_list li:nth-child(1), .swiper_dock_list li:nth-child(2), .swiper_dock_list li:nth-child(3), .swiper_dock_list li:nth-child(4){width:151px;height:150px;cursor:pointer;
 z-index: 1000;}
