--- a/css/common.css
+++ b/css/common.css
@@ -75,13 +75,23 @@ html,body{ -webkit-tap-highlight-color: transparent;width:100%;height:100%; }/*å
 .da_cheng_40{position:absolute;top:324px;left:39px;}
 .da_cheng_70{position:absolute;top:477px;;left:39px;}
 /*part3*/
+.dock_list{width:750px;height:200px;z-index:10; position:absolute;left:0;bottom:0;}
 .part3_title{width:750px;height:130px;display:flex;justify-content:center;position:absolute;top:60px;left:0px; z-index: 10;}
-.game_roles{width:750px;height:100%;}
+
+.game_roles{width:750px;height:100%;position: absolute;left:0;top:0;}
+
+
 .game_roles .swiper-container{width:100%;height:100%;}
 .game_roles .swiper-slide{width:100%;height:100%; position: relative;}
+.role_img{width:750px;height:100%;z-index:1;}
+.role_img1{background:url(../images/part3_role_img01.png) center top no-repeat;background-size: cover;z-index:1;}
 
 
-.dock_list{width:750px;height:200px;z-index:1000; position:absolute;left:0;bottom:0;}
+
+
+
+
+
 .swiper_dock_list{width:750px;height:200px;background:url(../images/part3_ico_bg.png) no-repeat;z-index:1000;background-size:100% 100%; }
 .swiper_dock_list li:nth-child(1), .swiper_dock_list li:nth-child(2), .swiper_dock_list li:nth-child(3), .swiper_dock_list li:nth-child(4){width:151px;height:150px;cursor:pointer;
 z-index: 1000;}
@@ -95,9 +105,7 @@ z-index: 1000;}
 background: rgba(23,59,121,0.75);min-height:300px;z-index: 1;}
 .role_info p{font-size:30px;color:#f7f2f0;line-height:46px;}
 .role_info h2{font-size:50px;color:#fff;font-family:'Times New Roman',Times,serif;font-weight: bold;margin-bottom: 30px; text-transform: uppercase;}
-.role_img{opacity:0;width:750px;height:100%;-webkit-transform:translate(100%,0);transform:translate(100%,0);-webkit-transition:all 0.3s;transition:all 0.3s;
-z-index:1;}
-.role_img1{background:url(../images/part3_role_img01.png) center top no-repeat;background-size: cover;z-index:1;}
+
 .role_img2{background:url(../images/part3_role_img02.png) center top no-repeat;background-size: cover;z-index:1;}
 .role_img3{background:url(../images/part3_role_img03.png) center top no-repeat;background-size: cover;z-index:1;}
 .role_img4{background:url(../images/part3_role_img04.png) center top no-repeat;background-size: cover;z-index:1;}
