--- a/css/common.css
+++ b/css/common.css
@@ -110,7 +110,7 @@ background: rgba(23,59,121,0.75);min-height:300px;z-index: 1;}
 .role_img3{background:url(../images/part3_role_img03.png) center top no-repeat;background-size: cover;z-index:1;}
 .role_img4{background:url(../images/part3_role_img04.png) center top no-repeat;background-size: cover;z-index:1;}
 .game_roles .swiper-slide-active .role_info{-webkit-transform:translate(0,0);transform:translate(0,0);-webkit-transition:all 0.3s;transition:all 0.3s;opacity:1; z-index: 10;}
-.game_roles .swiper-slide-active .role_img{opacity:1;-webkit-transform:translate(0,0);transform:translate(0,0);-webkit-transition:all 0.3s;transition:all 0.3s;z-index:1;}
+.game_roles .swiper-slide-active .role_img{opacity:1;-webkit-transition:all 0.3s;transition:all 0.3s;z-index:1;}
 /*part4*/
 .part4_title{width:750px;height:130px;display:flex;justify-content:center;position:absolute;top:60px;left:0px;}
  .part4_fw{width:100%;height:100%;object-fit:cover; position: absolute;left:0px;top:100px; z-index:1;} 
