--- a/css/common.css
+++ b/css/common.css
@@ -48,7 +48,7 @@ html,body{ -webkit-tap-highlight-color: transparent;width:100%;height:100%; }/*å
 .role .content dd .role_name,.note h3,.note h4 span,.part5_title h3 span,.role_info h2{font-family: 'Times New Roman', Times, serif;}
 /*part1*/
 .swiper-fullscreen{width: 100%;height: 100%;}
-.swiper-fullscreen >.swiper-wrapper>.swiper-slide{width:100%;height:100%;background-repeat:no-repeat;background-position: center center; background-size: cover; position: relative;}
+.swiper-fullscreen .slidea{width:100%;height:100%;background-repeat:no-repeat;background-position: center center; background-size: cover; position: relative;}
 .swiper-fullscreen .slide1{background-image: url(../images/phone_part01.jpg)}
 .swiper-fullscreen .slide2{background-image: url(../images/phone_part02.jpg)}
 .swiper-fullscreen .slide3{background-image: url(../images/phone_part03.jpg)}
@@ -76,15 +76,15 @@ html,body{ -webkit-tap-highlight-color: transparent;width:100%;height:100%; }/*å
 .da_cheng_70{position:absolute;top:477px;;left:39px;}
 /*part3*/
 
-.game_roles{width:100%; height:100%;  overflow:hidden; position:relative; margin:0 auto; }
-.game_roles .swiper-slide{width:100%; height:100%; position:relative;}
-.swiper_dock_list{ width:185px; height:597px;position:relative;background:url(../images/phone_small_btn_03_03.png) no-repeat; z-index:10;position: absolute; top:275px;left:20px; }
+.game_roles{width:100%; height:100%;  overflow:hidden; position:relative; margin:0 auto; z-index: 1; }
+.game_roles .swiper-slide{width:100%; height:100%; position:relative; z-index: 1; }
+.swiper_dock_list{ width:185px; height:597px;position:relative;background:url(../images/phone_small_btn_03_03.png) no-repeat; z-index:10;position: absolute; top:275px;left:20px;  z-index: 10;}
 .roles_wrap{width:768px; position: absolute; left:0px;top:0px; height:1168px;}
 .page_4 .swiper-button-next{background:url(../images/right_row.png);width:72px; height:101px; position: absolute; top: 460px;right:0px;}
 .page_4 .swiper-button-prev{background:url(../images/left_row.png);width:72px; height:101px;position: absolute; top: 460px;left:0px;}
 .role_info{position:absolute; top:313px; left:143px; z-index:1000;width:496px; opacity:0; -webkit-transform:translate(-100%, 0); transform:translate(-100%, 0); -webkit-transition:all 0.3s; transition:all 0.3s; z-index:99;}
 .role_jineng1 img,.role_jineng2 img,.role_jineng3 img,.role_jineng4 img,.role_jineng5 img,.role_jineng6 img,
-.role_jineng7 img,.role_jineng8 img,.role_jineng9 img,.role_jineng10 img,.role_jineng11 img,.role_jineng12 img,.role_jineng13 img,.role_jineng14 img{width:719px; height:224px; position:relative;top:918px;left:25px; z-index:3;opacity:0;  -webkit-transform:translate(-100%, 0); transform: translate(-100%, 0); -webkit-transition:all 0.3s; transition:all 0.3s;}
+.role_jineng7 img,.role_jineng8 img,.role_jineng9 img,.role_jineng10 img,.role_jineng11 img,.role_jineng12 img,.role_jineng13 img,.role_jineng14 img{width:719px; height:224px; z-index: 1;  position:relative;top:918px;left:25px; z-index:3;opacity:0;  -webkit-transform:translate(-100%, 0); transform: translate(-100%, 0); -webkit-transition:all 0.3s; transition:all 0.3s;}
 
 
 .role_img1,
@@ -94,21 +94,21 @@ html,body{ -webkit-tap-highlight-color: transparent;width:100%;height:100%; }/*å
 .role_img5,
 .role_img6,
 .role_img7,.role_img8,.role_img9,.role_img10,.role_img11,.role_img12,.role_img13,.role_img14
-{width:100%; height: 100%;position:absolute; top:0; right:0; opacity:0; object-fit: cover;  -webkit-transform:translate(100%, 0); transform: translate(100%, 0); -webkit-transition:all 0.3s; transition:all 0.3s;}
+{width:100%; height: 100%;position:absolute; top:0; right:0; opacity:0; object-fit: cover;  z-index: 1;  -webkit-transform:translate(100%, 0); transform: translate(100%, 0); -webkit-transition:all 0.3s; transition:all 0.3s;}
 .swiper_dock_list li:nth-child(1),.game_roles .swiper_dock_list li:nth-child(2),.game_roles .swiper_dock_list li:nth-child(3),.game_roles .swiper_dock_list li:nth-child(4),.game_roles .swiper_dock_list li:nth-child(5),
 .swiper_dock_list li:nth-child(6),.game_roles .swiper_dock_list li:nth-child(7),.game_roles .swiper_dock_list li:nth-child(8),.game_roles .swiper_dock_list li:nth-child(9),.game_roles .swiper_dock_list li:nth-child(10),
 .swiper_dock_list li:nth-child(11),.game_roles .swiper_dock_list li:nth-child(12),.game_roles .swiper_dock_list li:nth-child(13),.game_roles .swiper_dock_list li:nth-child(14)
-{width:67px; height:67px; cursor:pointer; }
-.swiper_dock_list li:nth-child(1){position: absolute; top: 75px;left:20px;}
-.swiper_dock_list li:nth-child(2){position: absolute;top: 75px;left: 95px;}
- .swiper_dock_list li:nth-child(3){position: absolute; top:147px; left:20px;}
- .swiper_dock_list li:nth-child(4){position: absolute; top:147px; left:95px;}
+{width:67px; height:67px; cursor:pointer; z-index: 10; }
+.swiper_dock_list li:nth-child(1){position: absolute; top: 75px;left:20px; z-index: 10;}
+.swiper_dock_list li:nth-child(2){position: absolute;top: 75px;left: 95px; z-index: 10;}
+ .swiper_dock_list li:nth-child(3){position: absolute; top:147px; left:20px; z-index: 10;}
+ .swiper_dock_list li:nth-child(4){position: absolute; top:147px; left:95px; z-index: 10;}
  .swiper_dock_list li:nth-child(5){position: absolute; top:218px; left:20px;}
 
  .swiper_dock_list li .icon.on{display:block;}
-.swiper-slide-active .role_info{-webkit-transform: translate(0, 0); transform: translate(0, 0); -webkit-transition: all 0.3s; transition: all 0.3s; opacity:1;}
-.swiper-slide-active .role_img{opacity:1; -webkit-transform:translate(0, 0); transform: translate(0, 0); -webkit-transition: all 0.3s; transition: all 0.3s;}
-.swiper-slide-active .role_jineng img{opacity:1; -webkit-transform:translate(0, 0); transform: translate(0, 0); -webkit-transition: all 0.5s; transition: all 0.5s;}
+.swiper-slide-active .role_info{-webkit-transform: translate(0, 0); transform: translate(0, 0); -webkit-transition: all 0.3s; transition: all 0.3s; opacity:1; z-index: 10;}
+.swiper-slide-active .role_img{opacity:1; -webkit-transform:translate(0, 0); transform: translate(0, 0); -webkit-transition: all 0.3s; transition: all 0.3s; z-index: 10;}
+.swiper-slide-active .role_jineng img{opacity:1; -webkit-transform:translate(0, 0); transform: translate(0, 0); -webkit-transition: all 0.5s; transition: all 0.5s; z-index: 10;}
 
 
 
