--- a/css/common.css
+++ b/css/common.css
@@ -47,7 +47,7 @@ html,body{ -webkit-tap-highlight-color: transparent;width:100%;height:100%; }/*å
 
 .role .content dd .role_name,.note h3,.note h4 span,.part5_title h3 span,.role_info h2{font-family: 'Times New Roman', Times, serif;}
 /*part1*/
-.swiper-fullscreen{width: 100%;height: 100%;}
+
 .swiper-fullscreen .slidea{width:100%;height:100%;background-repeat:no-repeat;background-position: center center; background-size: cover; position: relative;}
 .swiper-fullscreen .slide1{background-image: url(../images/phone_part01.jpg)}
 .swiper-fullscreen .slide2{background-image: url(../images/phone_part02.jpg)}
@@ -78,7 +78,7 @@ html,body{ -webkit-tap-highlight-color: transparent;width:100%;height:100%; }/*å
 
 .game_roles{width:100%; height:100%;  overflow:hidden; position:relative; margin:0 auto; z-index: 1; }
 .game_roles .swiper-slide{width:100%; height:100%; position:relative; z-index: 1; }
-.swiper_dock_list{ width:185px; height:597px;position:relative;background:url(../images/phone_small_btn_03_03.png) no-repeat; z-index:10;position: absolute; top:275px;left:20px;  z-index: 10;}
+.swiper_dock_list{ width:185px; height:597px;position:relative;background:url(../images/part3_ico_bg.png) no-repeat; z-index:10;position: absolute; top:275px;left:20px;  z-index: 10;}
 .roles_wrap{width:768px; position: absolute; left:0px;top:0px; height:1168px;}
 .page_4 .swiper-button-next{background:url(../images/right_row.png);width:72px; height:101px; position: absolute; top: 460px;right:0px;}
 .page_4 .swiper-button-prev{background:url(../images/left_row.png);width:72px; height:101px;position: absolute; top: 460px;left:0px;}
@@ -108,7 +108,7 @@ html,body{ -webkit-tap-highlight-color: transparent;width:100%;height:100%; }/*å
  .swiper_dock_list li .icon.on{display:block;}
 .swiper-slide-active .role_info{-webkit-transform: translate(0, 0); transform: translate(0, 0); -webkit-transition: all 0.3s; transition: all 0.3s; opacity:1; z-index: 10;}
 .swiper-slide-active .role_img{opacity:1; -webkit-transform:translate(0, 0); transform: translate(0, 0); -webkit-transition: all 0.3s; transition: all 0.3s; z-index: 10;}
-.swiper-slide-active .role_jineng img{opacity:1; -webkit-transform:translate(0, 0); transform: translate(0, 0); -webkit-transition: all 0.5s; transition: all 0.5s; z-index: 10;}
+.swiper-slide-active .role_jineng img{opacity:1; -webkit-transform:translate(0, 0); transform: translate(0, 0); -webkit-transition: all 0.5s; transition: all 0.5s;}
 
 
 
