--- a/css/common.css
+++ b/css/common.css
@@ -47,7 +47,7 @@ html,body{ -webkit-tap-highlight-color: transparent;width:100%;height:100%; }/*å
 
 .role .content dd .role_name,.note h3,.note h4 span,.part5_title h3 span,.role_info h2{font-family: 'Times New Roman', Times, serif;}
 /*part1*/
-
+.swiper-fullscreen {width:100%;height:100%;}
 .swiper-fullscreen .slidea{width:100%;height:100%;background-repeat:no-repeat;background-position: center center; background-size: cover; position: relative;}
 .swiper-fullscreen .slide1{background-image: url(../images/phone_part01.jpg)}
 .swiper-fullscreen .slide2{background-image: url(../images/phone_part02.jpg)}
