--- a/css/common.css
+++ b/css/common.css
@@ -47,7 +47,13 @@ html,body{ -webkit-tap-highlight-color: transparent;width:100%;height:100%; }/*å
 
 .role .content dd .role_name,.note h3,.note h4 span,.part5_title h3 span,.role_info h2{font-family: 'Times New Roman', Times, serif;}
 /*part1*/
-
+.swiper-fullscreen{width: 100%;height: 100%;z-index: 0;}
+.swiper-fullscreen >.swiper-wrapper>.swiper-slide{background-repeat:no-repeat;background-position: center center; background-size: cover;}
+.swiper-fullscreen .slide1{background-image: url(../images/phone_part01.jpg)}
+.swiper-fullscreen .slide2{background-image: url(../images/phone_part02.jpg)}
+.swiper-fullscreen .slide3{background-image: url(../images/phone_part03.jpg)}
+.swiper-fullscreen .slide4{background-image: url(../images/phone_part04.jpg)}
+.swiper-fullscreen .slide5{background-image: url(../images/list_bg.jpg)} 
 .main_show{width:750px;position: relative;height:100%;}
 
 .part1_logo{z-index:33333;width:450px;height:201px;display:flex;flex-flow:column nowrap;justify-content:space-between;align-items:center;position:fixed;top:53px;left:150px;text-align:center;z-index:999999999;
@@ -69,73 +75,16 @@ html,body{ -webkit-tap-highlight-color: transparent;width:100%;height:100%; }/*å
 .da_cheng_40{position:absolute;top:324px;left:39px;}
 .da_cheng_70{position:absolute;top:477px;;left:39px;}
 /*part3*/
-
-.game_roles{width:100%; height:100%;  overflow:hidden; position:relative; margin:0 auto; z-index: 1; }
-.game_roles .swiper-slide{width:100%; height:100%; position:relative; z-index: 1; }
-.swiper_dock_list{ width:185px; height:597px;position:relative;background:url(../images/part3_ico_bg.png) no-repeat; z-index:10;position: absolute; top:275px;left:20px;  z-index: 10;}
-.roles_wrap{width:768px; position: absolute; left:0px;top:0px; height:1168px;}
-.page_4 .swiper-button-next{background:url(../images/right_row.png);width:72px; height:101px; position: absolute; top: 460px;right:0px;}
-.page_4 .swiper-button-prev{background:url(../images/left_row.png);width:72px; height:101px;position: absolute; top: 460px;left:0px;}
-.role_info{position:absolute; top:313px; left:143px; z-index:1000;width:496px; opacity:0; -webkit-transform:translate(-100%, 0); transform:translate(-100%, 0); -webkit-transition:all 0.3s; transition:all 0.3s; z-index:99;}
-.role_jineng1 img,.role_jineng2 img,.role_jineng3 img,.role_jineng4 img,.role_jineng5 img,.role_jineng6 img,
-.role_jineng7 img,.role_jineng8 img,.role_jineng9 img,.role_jineng10 img,.role_jineng11 img,.role_jineng12 img,.role_jineng13 img,.role_jineng14 img{width:719px; height:224px; z-index: 1;  position:relative;top:918px;left:25px; z-index:3;opacity:0;  -webkit-transform:translate(-100%, 0); transform: translate(-100%, 0); -webkit-transition:all 0.3s; transition:all 0.3s;}
-
-
-.role_img1,
-.role_img2,
-.role_img3,
-.role_img4,
-.role_img5,
-.role_img6,
-.role_img7,.role_img8,.role_img9,.role_img10,.role_img11,.role_img12,.role_img13,.role_img14
-{width:100%; height: 100%;position:absolute; top:0; right:0; opacity:0; object-fit: cover;  z-index: 1;  -webkit-transform:translate(100%, 0); transform: translate(100%, 0); -webkit-transition:all 0.3s; transition:all 0.3s;}
-.swiper_dock_list li:nth-child(1),.game_roles .swiper_dock_list li:nth-child(2),.game_roles .swiper_dock_list li:nth-child(3),.game_roles .swiper_dock_list li:nth-child(4),.game_roles .swiper_dock_list li:nth-child(5),
-.swiper_dock_list li:nth-child(6),.game_roles .swiper_dock_list li:nth-child(7),.game_roles .swiper_dock_list li:nth-child(8),.game_roles .swiper_dock_list li:nth-child(9),.game_roles .swiper_dock_list li:nth-child(10),
-.swiper_dock_list li:nth-child(11),.game_roles .swiper_dock_list li:nth-child(12),.game_roles .swiper_dock_list li:nth-child(13),.game_roles .swiper_dock_list li:nth-child(14)
-{width:67px; height:67px; cursor:pointer; z-index: 10; }
-.swiper_dock_list li:nth-child(1){position: absolute; top: 75px;left:20px; z-index: 10;}
-.swiper_dock_list li:nth-child(2){position: absolute;top: 75px;left: 95px; z-index: 10;}
- .swiper_dock_list li:nth-child(3){position: absolute; top:147px; left:20px; z-index: 10;}
- .swiper_dock_list li:nth-child(4){position: absolute; top:147px; left:95px; z-index: 10;}
- .swiper_dock_list li:nth-child(5){position: absolute; top:218px; left:20px;}
-
- .swiper_dock_list li .icon.on{display:block;}
-.swiper-slide-active .role_info{-webkit-transform: translate(0, 0); transform: translate(0, 0); -webkit-transition: all 0.3s; transition: all 0.3s; opacity:1; z-index: 10;}
-.swiper-slide-active .role_img{opacity:1; -webkit-transform:translate(0, 0); transform: translate(0, 0); -webkit-transition: all 0.3s; transition: all 0.3s; z-index: 10;}
-.swiper-slide-active .role_jineng img{opacity:1; -webkit-transform:translate(0, 0); transform: translate(0, 0); -webkit-transition: all 0.5s; transition: all 0.5s;}
-
-
-
-
-
-
-
-
-
-
-/* 
-
-
-
-
-
 .dock_list{width:750px;height:200px;z-index:1000; position:absolute;left:0;bottom:0;}
 .part3_title{width:750px;height:130px;display:flex;justify-content:center;position:absolute;top:60px;left:0px; z-index: 10;}
 
-.game_roles{width:100%;height:100%;position: absolute;left:0;top:0;}
+.game_roles{width:750px;height:100%;position: absolute;left:0;top:0;}
 
 
-
-
-.role_img{width:100%;height:100%;z-index:1;}
+.game_roles .swiper-container{width:100%;height:100%;}
+.game_roles .swiper-slide{width:100%;height:100%; position: relative;}
+.role_img{opacity:0;width:750px;height:100%;-webkit-transform:translate(100%,0);transform:translate(100%,0);-webkit-transition:all 0.3s;transition:all 0.3s;z-index:1;}
 .role_img1{background:url(../images/part3_role_img01.png) center top no-repeat;background-size: cover;z-index:1;}
-.roles_wrap {
-    width: 768px;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    height: 100%;
-}
 
 
 
@@ -152,7 +101,7 @@ z-index: 1000;}
  .swiper_dock_list li:nth-child(4){position:absolute;top:18px;left:525px;z-index:1000;}
  .swiper_dock_list li img{display:none;width:180px;height:180px;}
 .swiper_dock_list li .icon.on{display:block;}
-.role_info{padding:40px 20px 40px 20px;position:absolute;bottom:200px;left:0;width:750px;opacity:0;z-index:99;
+.role_info{padding:40px 20px 40px 20px;position:absolute;bottom:200px;left:0;width:750px;opacity:0;-webkit-transform:translate(-100%,0);transform:translate(-100%,0);-webkit-transition:all 0.3s;transition:all 0.3s;z-index:99;
 background: rgba(23,59,121,0.75);min-height:300px;z-index: 1;}
 .role_info p{font-size:30px;color:#f7f2f0;line-height:46px;}
 .role_info h2{font-size:50px;color:#fff;font-family:'Times New Roman',Times,serif;font-weight: bold;margin-bottom: 30px; text-transform: uppercase;}
@@ -161,7 +110,7 @@ background: rgba(23,59,121,0.75);min-height:300px;z-index: 1;}
 .role_img3{background:url(../images/part3_role_img03.png) center top no-repeat;background-size: cover;z-index:1;}
 .role_img4{background:url(../images/part3_role_img04.png) center top no-repeat;background-size: cover;z-index:1;}
 .game_roles .swiper-slide-active .role_info{-webkit-transform:translate(0,0);transform:translate(0,0);-webkit-transition:all 0.3s;transition:all 0.3s;opacity:1; z-index: 10;}
-.game_roles .swiper-slide-active .role_img{opacity:1;-webkit-transform:translate(0,0);transform:translate(0,0);-webkit-transition:all 0.3s;transition:all 0.3s;z-index:1;} */
+.game_roles .swiper-slide-active .role_img{opacity:1;-webkit-transform:translate(0,0);transform:translate(0,0);-webkit-transition:all 0.3s;transition:all 0.3s;z-index:1;}
 /*part4*/
 .part4_title{width:750px;height:130px;display:flex;justify-content:center;position:absolute;top:60px;left:0px;}
  .part4_fw{width:100%;height:100%;object-fit:cover; position: absolute;left:0px;top:100px; z-index:1;} 
