--- a/css/common.css
+++ b/css/common.css
@@ -44,119 +44,24 @@ html,body{-webkit-tap-highlight-color:transparent;width:100%;height:100%}
 .swiper-fullscreen .slide9{background-image:url(../images/phone_part09.jpg)}
 
 
-input[type="checkbox"]{width:0.16rem;margin-right:0.12rem;cursor:pointer;height:0.16rem;background:url(../images/part2_check.png) no-repeat;background-size:100% 100%}
-input[type="checkbox"]:checked{background:url(../images/part2_checked.png) no-repeat;background-size:100% 100%}
-.regitser_main{width:5rem}
-.register_left_top{width:5rem;position:relative;left:-2.9rem}
-.register_left_bottom{width:8rem;position:relative;left:-2.4rem}
-.re_btn img{width:4.12rem;height:0.61rem}
-.part2_award_gift img{width:4.12rem;height:1.68rem;margin-bottom:0.2rem;margin-top:0.1rem}
-.register_law_tip,.register_checkbox_tip,.register_cbt_tip{color:#fff;font-family:myFirstFont}
-.register_checkbox_tip p{height:0.2rem;display:flex;align-items:center}
-.register_checkbox_tip{font-size:0.12rem;margin-bottom:0.1rem}
-.register_checkbox_tip p a{color:#ffc459;text-decoration:underline}
-.register_law_tip,.register_cbt_tip{font-size:0.14rem}
-.register_input{height:0.6rem;width:4.12rem;background:rgba(0,0,0,0.8);border:1px solid #968b8e;border-radius:0.1rem;line-height:0.6rem;margin-bottom:0.1rem}
-.register_input p{display:flex;justify-content:space-between}
-.register_input span{font-size:0.2rem;color:#fff;font-weight:bold;display:inline-block;width:1rem;text-align:center;position:relative}
-.text_content1{width:3.2rem;height:0.61rem;line-height:0.61rem;background:none;letter-spacing:0.01rem;font-size:0.14rem;color:#999899;float:left;border:none;overflow:hidden;text-align:left;font-family:myFirstFont}
-.register_law_tip_btn{margin-top:0.1rem;margin-bottom:0.15rem}
-.ios_tab img{width:auto;height:0.36rem}
-.register_input strong.line{width:0.07rem;background:#999899;height:0.02rem;display:inline-block;position:absolute;left:0.8rem;top:0.3rem}
-.register_law_tip_btn img,.register_yy_btn img,.part3_regitster img,.part4_hd_btn img{transition:all 0.3s}
+
+.part1_logo{z-index:33333;width:7.5rem;height:3.24rem; margin-bottom: 0.8rem;}
+.part1_video_play{width:7.5rem;height:1.42rem;overflow:hidden;cursor:pointer;position:absolute;z-index:100;background: url(../images/part1_video_play_bg.png) no-repeat center center;background-size: 100% 100%}
+.part1_video_play:hover{background: url(../images/part1_video_play_bg.png) no-repeat center center;background-size: 100% 100%;transform:scale(1.1);transition: all 0.3s;}
+.part1_video_play span{display: block;width:7.5rem;height:1.42rem;background: url(../images/part1_video_play_btn.png) no-repeat center center;background-size: 100% 100%;-webkit-animation:circle 5s infinite linear;animation:circle 5s infinite linear;}
+
+.part1_video_btn{position: relative;width:7.5rem;height:1.42rem;display: flex;justify-content: center;margin-bottom: 0.7rem;}
 
 
-
-
-
-
-
-
-
-
-
-.bg-video1{width:100%;height:100vh;display:block;object-fit:cover;position:absolute;top:0;left:0;}
-.bg-video{width:100%;height:100vh;display:block;object-fit:cover;position:absolute;top:0;left:0;}
-.page{width:100%;height:100vh;display:-webkit-box;display:-ms-flexbox;display:flex;position:relative;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;font-size:20px;background-size:cover;background-position:center;}
-.page7_role_bg .bg-video{width:100%;height:100vh;display:block;object-fit:cover;position:absolute;top:0;left:0;}
-.part1_title  img{width:7.45rem;height:1.1rem;margin-top: 0.5rem;margin-bottom: 0.01rem;}
-.part1_solgen img {width: 11.14rem;height: 1.67rem;margin-bottom: 0.8rem;}
-
-.part1_solgen span{    display: block;
-    position: relative;
-    z-index: 2;
-    width: 11.14rem;
-    height: 1.67rem;}
-.part1_solgen span:before { content: ""; position: absolute; width:2.93rem; height:0.69rem; top:0.8rem; left: -2.2rem; overflow: hidden;animation: guang 5s infinite;
-   background: url(../images/part1_line.png);background-size: 100% 100%;}
-	/*光束划过按钮*/
-    @keyframes guang{
-		0%{left:0%;
-			
-	
-		}
-		100%{left: 75%;
-			
-		}
-	}
-
-
-    @-webkit-keyframes magnify {
-		0% {
-		-webkit-transform: scale(0.96);
-	}
-	100% {
-		-webkit-transform: scale(1);
-	}
-	}
-	@-moz-keyframes magnify {
-		0% {
-		-moz-transform: scale(1);
-	}
-	100% {
-		-moz-transform: scale(0.96);
-	}
-	}
-	@keyframes magnify {
-		0% {
-		transform: scale(1);
-	}
-	100% {
-		transform: scale(0.96);
-	}
-	}
-
-    .role_tc_video img{width:2.45rem;height:1.3rem;}
-    .role_tc_skill img{width:3.37rem;height:2.06rem;}
-.part_introduction_text_btn_play{width:1.08rem;height:1.08rem;overflow:hidden;cursor:pointer;position:absolute;z-index:100;background: url(../images/part6_play_btn.png) no-repeat center center;background-size: 100% 100%}
-.part_introduction_text_btn_play:hover{background: url(../images/part1_video_play_btn.png) no-repeat center center;background-size: 100% 100%;transform:scale(1.1);transition: all 0.3s;}
-
-.part_introduction_text_btn_play span{display: block;width:1.08rem;height:1.08rem;background: url(../images/part6_play_bg.png) no-repeat center center;background-size: 100% 100%;-webkit-animation:circle 5s infinite linear;animation:circle 5s infinite linear;}
-
-
-.part_introduction_text_btn{position: absolute;width:1.08rem;height:1.08rem;display: flex;justify-content: center;margin-bottom: 0.7rem;bottom:-0.5rem;right:43%}
-.part1_video_play{width:1.33rem;height:1.33rem;overflow:hidden;cursor:pointer;position:absolute;z-index:100;background: url(../images/part1_video_play_btn.png) no-repeat center center;background-size: 100% 100%}
-.part1_video_play:hover{background: url(../images/part1_video_play_btn.png) no-repeat center center;background-size: 100% 100%;transform:scale(1.1);transition: all 0.3s;}
-.part1_video_btn{position: relative;width:1.33rem;height:1.33rem;display: flex;justify-content: center;margin-bottom: 0.7rem;}
-.part1_video_play span{display: block;width:1.33rem;height:1.33rem;background: url(../images/part1_video_play_bg.png) no-repeat center center;background-size: 100% 100%;-webkit-animation:circle 5s infinite linear;animation:circle 5s infinite linear;}
 .part1_btn  img{width: 5.52rem;height: 1.18rem;-webkit-animation: magnify .6s linear infinite alternate;	-moz-animation: magnify .6s linear infinite alternate;	animation: magnify .6s linear infinite alternate;}
 
 
 
 
-@-webkit-keyframes circle{0%{ transform:rotate(0deg); }100%{ transform:rotate(360deg); }}
-@keyframes circle{0%{ transform:rotate(0deg); }100%{ transform:rotate(360deg); }}
-.bgm_icon{position: absolute;bottom: 0.3rem;left:0.3rem;width:0.77rem;height:0.77rem; cursor: pointer;}
-#bgm_icon{width:0.77rem;height:0.77rem;}
-.ing{animation: circleAn 3s infinite linear;}
-@keyframes circleAn {
-  100% {transform:rotate(720deg);}
-}
 
 
 
-
-.part2_register_slogen img{width:5.23rem;height:1.27rem}
+.part2_register_slogen img{width:7.5rem;height:1.51rem}
 .part2_register_text{font-size:0.2rem;color:#471d18;font-family:myFirstFont;width:4.12rem;text-align:center;margin-bottom:0.2rem;margin-bottom:0.1rem}
 .ios_tab{height:0.36rem;display:flex;align-content:center}
 .ios_tab  lable.one{display:block;height:0.36rem;display:flex;align-content:center}
@@ -169,16 +74,16 @@ input[type='radio']{width:0.25rem;cursor:pointer;height:0.25rem;vertical-align:m
 input[type="checkbox"]{width:0.16rem;margin-right:0.12rem;cursor:pointer;height:0.16rem;background:url(../images/part2_check.png) no-repeat;background-size:100% 100%}
 input[type="checkbox"]:checked{background:url(../images/part2_checked.png) no-repeat;background-size:100% 100%}
 .regitser_main{width:5rem}
-.register_left_top{width:5rem;position:relative;left:-2.9rem}
-.register_left_bottom{width:8rem;position:relative;left:-2.4rem}
-.re_btn img{width:4.12rem;height:0.61rem}
-.part2_award_gift img{width:4.12rem;height:1.68rem;margin-bottom:0.2rem;margin-top:0.1rem}
+.register_left_top{width:7.5rem;position:relative;left:0rem}
+.register_left_bottom{width:7.5rem;position:relative;left:0rem}
+.re_btn img{width:6.58rem;height:0.86rem}
+.part2_award_gift img{width:3.63rem;height:4.9rem;margin-bottom:0.2rem;margin-top:0.1rem}
 .register_law_tip,.register_checkbox_tip,.register_cbt_tip{color:#fff;font-family:myFirstFont}
 .register_checkbox_tip p{height:0.2rem;display:flex;align-items:center}
 .register_checkbox_tip{font-size:0.12rem;margin-bottom:0.1rem}
 .register_checkbox_tip p a{color:#ffc459;text-decoration:underline}
 .register_law_tip,.register_cbt_tip{font-size:0.14rem}
-.register_input{height:0.6rem;width:4.12rem;background:rgba(0,0,0,0.8);border:1px solid #968b8e;border-radius:0.1rem;line-height:0.6rem;margin-bottom:0.1rem}
+.register_input{height:0.6rem;width:6.58rem;background:rgba(0,0,0,0.8);border:1px solid #968b8e;border-radius:0.1rem;line-height:0.6rem;margin-bottom:0.1rem}
 .register_input p{display:flex;justify-content:space-between}
 .register_input span{font-size:0.2rem;color:#fff;font-weight:bold;display:inline-block;width:1rem;text-align:center;position:relative}
 .text_content1{width:3.2rem;height:0.61rem;line-height:0.61rem;background:none;letter-spacing:0.01rem;font-size:0.14rem;color:#999899;float:left;border:none;overflow:hidden;text-align:left;font-family:myFirstFont}
@@ -190,16 +95,16 @@ input[type="checkbox"]:checked{background:url(../images/part2_checked.png) no-re
 
 
 
-.part3_slogen img{width:9.57rem;height:2.47rem;margin-bottom: 0.25rem;}
+.part3_slogen img{width:7.5rem;height:2.69rem;margin-bottom: 0.25rem;}
+.part3_title img{width:7.5rem;height:1.68rem;margin-bottom: 0.25rem;}
 .part3_left{width:9.6rem;position:absolute;left:0rem;top:0rem}
 .dc_bg{display:flex;justify-content:space-between;flex-direction:row;width:10rem;height:3.08rem;border:1p solid #f00}
-.dc_20_hover{background:url(../images/part3_dc_img_01.png);background-size:100% 100%;position:relative;width:1.83em;height:3.08rem}
-.dc_50_hover{background:url(../images/part3_dc_img_02.png);background-size:100% 100%;position:relative;width:1.83em;height:3.08rem}
-.dc_70_hover{background:url(../images/part3_dc_img_03.png);background-size:100% 100%;position:relative;width:1.83em;height:3.08rem}
-.dc_100_hover{background:url(../images/part3_dc_img_04.png);background-size:100% 100%;position:relative;width:1.83em;height:3.08rem}
-.dc_150_hover{background:url(../images/part3_dc_img_05.png);background-size:100% 100%;position:relative;width:1.83em;height:3.08rem}
+.dc_20_hover{background:url(../images/part3_dc_img_01.png);background-size:100% 100%;position:relative;width:2.13rem;height:2.62rem}
+.dc_50_hover{background:url(../images/part3_dc_img_02.png);background-size:100% 100%;position:relative;width:2.13rem;height:2.62rem}
+.dc_70_hover{background:url(../images/part3_dc_img_03.png);background-size:100% 100%;position:relative;width:2.13rem;height:2.62rem}
+.dc_100_hover{background:url(../images/part3_dc_img_04.png);background-size:100% 100%;position:relative;width:2.13rem;height:2.62rem}
+.dc_150_hover{background:url(../images/part3_dc_img_05.png);background-size:100% 100%;position:relative;width:2.13rem;height:2.62rem}
 .dc img{width:2.18rem;height:3.08rem;position:absolute;top:0rem;left:-0.17rem}
-.dc img{width:2.18rem;height: 3.08rem;position:absolute;top:0rem;left:-0.17rem;}
 .part3_regitster{width:4.17rem;height: 1.33rem;cursor: pointer;z-index: 10;}
 .part3_regitster img{width:4.17rem;height: 1.33rem;}
 
@@ -219,7 +124,7 @@ input[type="checkbox"]:checked{background:url(../images/part2_checked.png) no-re
 .part5_video_slogen img {width:8.66rem;height:2.63rem;margin-bottom: 0.4rem;}
 
 .part6_introduction_title img  {width:auto;height:1.57rem;margin-top: 0.2rem;}
-.part_introduction_text  {width: 6.93em;height:7.09rem;background:url(../images/part6_introduction_text.png) no-repeat;  position: relative;
+.part_introduction_text  {width:7.5rem;height:9.56rem;background:url(../images/part6_introduction_text.png) no-repeat;  position: relative;
     background-size: 100% 100%;}
 .part_video_img{display: flex;justify-content:space-between;}
 
@@ -247,7 +152,7 @@ input[type="checkbox"]:checked{background:url(../images/part2_checked.png) no-re
 
 .item{margin-bottom:0.6rem}
 .part9_video_title{margin-bottom: 0.3rem;}
-.part9_video_title img{width:9.97rem;height:2.23rem}
+.part9_video_title img{width:7.5rem;height:2.03rem}
 .item ul{display:flex;margin-bottom:0.4rem;justify-content:space-between;width:10rem}
 .item ul li{width:3.08rem;height:1.61rem;overflow:hidden}
 .item  ul img{width:3.08rem;height:1.61rem;transition-delay:0s;transition-duration:1s;transition-property:all;transition-timing-function:ease;-moz-transition-delay:0s;-moz-transition-duration:1s;-moz-transition-property:all;-moz-transition-timing-function:ease;-webkit-transition-delay:0s;-webkit-transition-duration:1s;-webkit-transition-property:all;-webkit-transition-timing-function:ease;-o-transition-delay:0s;-o-transition-duration:1s;-o-transition-property:all;-o-transition-timing-function:ease}
@@ -272,11 +177,8 @@ input[type="checkbox"]:checked{background:url(../images/part2_checked.png) no-re
 
 
 
+.main_show{width:100%;position:relative;height:calc(100vh);}
 
-
-.main_show{width:100%;position:relative;height:100%}
-.part1_logo{z-index:33333;width:7.5rem;height:3.24rem;display:flex;flex-flow:column nowrap;justify-content:space-between;align-items:center;text-align:center;z-index:999999999;
-    -webkit-transition:all 1s ease-in-out;transition:all 1s ease-in-out;margin-bottom:0.7rem ;}
 .part1_logo img,.part1_solgen img,.part1_video_play img,.part1_btn img,.part1_footer img{width:7.5rem;height:auto;}
 .part1_footer,.part1_down{position:absolute;left:50%;width:7.5rem;transform: translateX(-50%); display: flex; justify-content: center;}
 .part1_footer{bottom: 0;}
@@ -299,7 +201,7 @@ input[type="checkbox"]:checked{background:url(../images/part2_checked.png) no-re
 .inner,.mainShow1{width:100%;display:flex;z-index:10;justify-content:center;align-items:center}
 .inner {
     position: relative;
-    height: calc(100vh);top:0.9rem;
+    height: calc(100vh);
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -307,16 +209,16 @@ input[type="checkbox"]:checked{background:url(../images/part2_checked.png) no-re
     justify-content: center;
     box-sizing: border-box;
 }
-.inner .content{position:relative;top:0rem;display:flex;align-items:center;flex-direction:column}
+.inner .content{position:relative;top:0rem;display:flex;align-items:center;flex-direction:column} 
 .inner .btn-play{display:block;width:4.94rem;height:0.91rem;margin-top:0.1rem;background:url("img/btn-play.png") no-repeat 0 0;z-index:1}
 .part2_title{width:6.1rem;height:1.22rem;position:absolute;top:0.6rem;left:50%;margin-left:-3.05rem}
 .part2_register_btn{width:6.1rem;height:1.43rem;position:absolute;top:1.8rem;left:50%;margin-left:-3.05rem}
-.dc_bg{width:7.03rem;height:6.43rem;position:absolute;left:0.22rem;bottom:0.3rem;background:url(../images/part2_dc_bg.png)}
+/* .dc_bg{width:7.03rem;height:6.43rem;position:absolute;left:0.22rem;bottom:0.3rem;background:url(../images/part2_dc_bg.png)}
 .dc img{width:6.5rem;height:1.45rem}
 .da_cheng_10{position:absolute;top:0.19rem;left:0.39rem}
 .da_cheng_20{position:absolute;top:1.72rem;left:0.39rem}
 .da_cheng_40{position:absolute;top:3.24rem;left:0.39rem}
-.da_cheng_70{position:absolute;top:4.77rem;left:0.39rem}
+.da_cheng_70{position:absolute;top:4.77rem;left:0.39rem} */
 .game_roles .swiper-container{width:100%;height:100%;z-index:1}
 .part3_title{width:7.5rem;height:1.3rem;display:flex;justify-content:center;position:absolute;top:0.6rem;left:0rem;z-index:10}
 .game_roles{width:7.5rem;height:100%;z-index:1;position:absolute;left:0}
@@ -476,7 +378,7 @@ width:100%;height:92%; display: flex; align-items: center; justify-content: cent
 
 @-webkit-keyframes circle{0%{ transform:rotate(0deg); }100%{ transform:rotate(360deg); }}
 @keyframes circle{0%{ transform:rotate(0deg); }100%{ transform:rotate(360deg); }}
-.bgm_icon{position: absolute;bottom: 0.3rem;left:0.3rem;width:0.77rem;height:0.77rem; cursor: pointer;}
+.bgm_icon{position: absolute;top: 0.3rem;left:0.3rem;width:0.77rem;height:0.77rem; cursor: pointer; z-index: 10;}
 #bgm_icon{width:0.77rem;height:0.77rem;}
 .ing{animation: circleAn 3s infinite linear;}
 @keyframes circleAn {
