--- a/css/common.css
+++ b/css/common.css
@@ -149,7 +149,8 @@ input[type="checkbox"]:checked{background:url(../images/part2_checked.png) no-re
 
 
 
-
+.bg-video1{width:100%;height:100vh;display:block;object-fit:cover;position:absolute;top:0;left:0;}
+.bg-video{width:100%;height:100vh;display:block;object-fit:cover;position:absolute;top:0;left:0;}
 .item{margin-bottom:0.6rem}
 .part9_video_title{margin-bottom: 0.3rem;}
 .part9_video_title img{width:7.5rem;height:2.03rem}
